# EGC

LPG/: CMakeLists.txt
LPG/LaboratoarePG/L1/: CMakeLists.txt  main0.cpp
LPG/LaboratoarePG/L11/: CMakeLists.txt  main0.cpp  main1.cpp
LPG/LaboratoarePG/L12/: CMakeLists.txt  main0.cpp  main1.cpp
LPG/LaboratoarePG/L2/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
LPG/LaboratoarePG/L3/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp
LPG/LaboratoarePG/L4/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp
LPG/LaboratoarePG/L5/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
LPG/LaboratoarePG/L6/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
LPG/LaboratoarePG/L7/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
LPG/LaboratoarePG/L8/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
LPG/LaboratoarePG/L9/: CMakeLists.txt  ImageLoad.h  main0.cpp  main1.cpp
RAR and ZIP/: freeglut.rar
opengl/: opengl.sln
opengl 2/opengl/: main.cpp
opengl 2/opengl/Debug/: opengl.exe.recipe  opengl.ilk  vc143.idb
opengl 2/opengl/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl 2/opengl/x64/Debug/: vc143.idb
opengl 3/opengl/: ImageLoad.cpp  main.cpp  opengl.vcxproj  opengl.vcxproj.filters
opengl 3/opengl/Debug/: opengl.exe.recipe  opengl.ilk  vc143.idb
opengl 3/opengl/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl 4/opengl/: main.cpp
opengl 4/opengl/Debug/: opengl.exe.recipe  opengl.ilk  vc143.idb
opengl 4/opengl/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl 4/opengl/x64/Debug/opengl.tlog/: CL.read.1.tlog
opengl/opengl/: main.cpp  opengl.vcxproj
opengl/opengl/Debug/: opengl.exe.recipe  opengl.ilk  vc143.idb
opengl/opengl/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl/opengl/x64/Debug/opengl.tlog/: CL.command.1.tlog  CL.write.1.tlog  opengl.lastbuildstate
